--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ lazy_static = "1.4.0"
 structopt = "0.3.25"
 rustyline = "9.1.2"
 thiserror = "1.0.30"
+alloy_macros = { path = "./alloy-macros" }
+
+[workspace]
+members = [".", "alloy-macros"]
