--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Atahan Yorgancı <atahanyorganci@hotmail.com>"]
 edition = "2018"
 
 [dependencies]
+nom = "7.1.0"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 lazy_static = "1.4.0"
