--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ lazy_static = "1.4.0"
 structopt = "0.3.25"
 rustyline = "9.1.2"
 thiserror = "1.0.30"
+phf = { version = "0.10", features = ["macros"] }
 alloy_macros = { path = "./alloy-macros" }
 
 [workspace]
